--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <!--logo here-->
-    <div class="logo">IWELOO</div>
+    <div class="logo">IWELLO</div>
 
 <!--header-->
 <div class="wrapper">
     <h1>Be The First To Know When Iwello Launches</h1>
-    <p>Join The List and we'll let you know when IWELOO has launched.</p>
-   <b> <p class="date">JANUARY 15,2021 // 12:00PM GMT</p> </b>
+    <p>Join The List and we'll let you know when IWELLO has launched.</p>
+   <b> <p class="date">DECEMBER 1,2020 // 12:00PM GMT</p> </b>
   <button class="btn1"><a  href="#">KEEP ME IN THE LOOP</a></button>
 </div>
 
@@ -29,13 +29,13 @@
 <div class="test">
     <p class="p-head">what people are saying..</p>
     <div class="content">
-        <p class="p-test">IWELLO is a wonderful startup aiming at helping remote areas get the best possible health care. <br> I personally love the idea and they are already helping in my area. THANK YOU IWELLO </p>
-        <p class="p-name"> .WISDOM AGU</p>
+        <p class="p-test">We need more tech like this to support our people (nigerians)</p>
+        <p class="p-name"> .DR.RUNCIE C.W.CHIDEBE, FOUNDER PROJECT PINK BLUE</p>
     </div>
 <!--2nd testimonial-->
     <div class="content">
-        <p class="p-test"> knowing iweloo was a blessing to me and my family. <br> they offer the best services for low as $1. THANK YOU IWELLO </p>
-        <p class="p-name"> .DAMILOLA OLUGBENGA</p>
+        <p class="p-test"> I just went through the document you sent and i must say it's a very good idea and definitely a real need in the country. <br> it's also commendable that none (of the founding members are doctors or even in the health field.) <br> it shows in-depth research was done. well done to you and your team.</p>
+        <p class="p-name"> .DR. AMARACHI IJEOMA, GREEN-ONYX FERTILITY CLINIC</p>
 </div>
 
 <!--ender-->
