--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 </head>
 <body>
     <!--logo here-->
-    <div class="logo">IWELLO</div>
+    <div class="logo">
+        <img src="iwelloo logo.jpeg" alt="#">
+    </div>
 
 <!--header-->
 <div class="wrapper">
     <h1>Be The First To Know When Iwello Launches</h1>
     <p>Join The List and we'll let you know when IWELLO has launched.</p>
    <b> <p class="date">DECEMBER 1,2020 // 12:00PM GMT</p> </b>
-  <button class="btn1"><a  href="#">KEEP ME IN THE LOOP</a></button>
+  <button class="btn1"><a  href="mailchimp.html">KEEP  ME IN THE LOOP</a></button>
 </div>
 
 <!--timer starts here-->
@@ -26,22 +28,25 @@
 
 
 <!--testimonials-->
+
 <div class="test">
-    <p class="p-head">what people are saying..</p>
+    <p class="p-head">what we do ..</p>
     <div class="content">
-        <p class="p-test">We need more tech like this to support our people (nigerians)</p>
-        <p class="p-name"> .DR.RUNCIE C.W.CHIDEBE, FOUNDER PROJECT PINK BLUE</p>
+        <p class="p-test">IWELLOO IS A HEALTH SOLUTION THAT ALLOWS YOU TO PAY N100 (LESS THAN $1) FOR A CONSULTATION, <br> N900 (LESS THAN $2) FOR A CHECKUP AND AS LOW AS N1600 PER TREATMENT.</p>
+        <p class="p-test">YOU <b>NO LONGER</b>  HAVE TO BE AFRAID OF HOSPITALS AND DOCTORS BECAUSE OF FEES.  <br> WE GOT YOU COVERED ALL THE WAY. NO FORCEFUL SUBSCRIPTION. YOU CAN <b>PAY AS YOU GO.</b></p>
     </div>
+
 <!--2nd testimonial-->
+<!--
     <div class="content">
         <p class="p-test"> I just went through the document you sent and i must say it's a very good idea and definitely a real need in the country. <br> it's also commendable that none (of the founding members are doctors or even in the health field.) <br> it shows in-depth research was done. well done to you and your team.</p>
         <p class="p-name"> .DR. AMARACHI IJEOMA, GREEN-ONYX FERTILITY CLINIC</p>
 </div>
-
+-->
 <!--ender-->
 <div class="ender">
 <p class="end">Be The First To Know When Iwello Launches</p>
-<button class="btn1"><a  href="#">KEEP ME IN THE LOOP</a></button>
+<button class="btn1"><a  href="mailchimp.html">KEEP ME IN THE LOOP</a></button>
 </div>
 
 
@@ -49,10 +54,9 @@
 <div class="footer">
     <div class="social">
         <ul>
-            <li> <a class="so" href="#"><i class="fab fa-twitter"></i> </a></li>
-            <li> <a class="so" href="#"><i class="fab fa-facebook"></i> </a></li>
-            <li>  <a  class="so"href="#"><i class="fab fa-instagram"></i> </a></li>
-            <li>  <a class="so" href="#"><i class="fas fa-phone-alt"></i> </a></li>
+           <!--   <li> <a class="so" href="#"><i class="fab fa-twitter"></i> </a></li>
+           <li>  <a  class="so"href="#"><i class="fab fa-instagram"></i> </a></li>-->
+          
           
         </ul>
         <p class="p-footer"> iwello &copy; 2020</p>
