--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!--testimonials-->
 
 <div class="test">
-    <p class="p-head">what we do ..</p>
+    <p class="p-head">ABOUT US</p>
     <div class="content">
         <p class="p-test">IWELLOO IS A HEALTH SOLUTION THAT ALLOWS YOU TO PAY N100 (LESS THAN $1) FOR A CONSULTATION, <br> N900 (LESS THAN $2) FOR A CHECKUP AND AS LOW AS N1600 PER TREATMENT.</p>
         <p class="p-test">YOU <b>NO LONGER</b>  HAVE TO BE AFRAID OF HOSPITALS AND DOCTORS BECAUSE OF FEES.  <br> WE GOT YOU COVERED ALL THE WAY. NO FORCEFUL SUBSCRIPTION. YOU CAN <b>PAY AS YOU GO.</b></p>
