--- a/index.html
+++ b/index.html
@@ -32,17 +32,10 @@
 <div class="test">
     <p class="p-head">ABOUT US</p>
     <div class="content">
-        <p class="p-test">IWELLOO IS A HEALTH SOLUTION THAT ALLOWS YOU TO PAY N100 (LESS THAN $1) FOR A CONSULTATION, <br> N900 (LESS THAN $2) FOR A CHECKUP AND AS LOW AS N1600 PER TREATMENT.</p>
-        <p class="p-test">YOU <b>NO LONGER</b>  HAVE TO BE AFRAID OF HOSPITALS AND DOCTORS BECAUSE OF FEES.  <br> WE GOT YOU COVERED ALL THE WAY. NO FORCEFUL SUBSCRIPTION. YOU CAN <b>PAY AS YOU GO.</b></p>
+        <p class="p-test"> iwello is a health solution that allows you to pay N100 (less than $1) for a counsultation, <br> N900 (less than $2) for a checkup and as low as N1600 per treatment. </p>
+        <p class="p-test"> you <b>NO LONGER</b> have to be afraid of hospitals and doctors becauuse of fees. <br> we got you covered all the way. no forceful subscription. you can <b>PAY AS YOU GO.</b> </p>
     </div>
 
-<!--2nd testimonial-->
-<!--
-    <div class="content">
-        <p class="p-test"> I just went through the document you sent and i must say it's a very good idea and definitely a real need in the country. <br> it's also commendable that none (of the founding members are doctors or even in the health field.) <br> it shows in-depth research was done. well done to you and your team.</p>
-        <p class="p-name"> .DR. AMARACHI IJEOMA, GREEN-ONYX FERTILITY CLINIC</p>
-</div>
--->
 <!--ender-->
 <div class="ender">
 <p class="end">Be The First To Know When Iwello Launches</p>
@@ -52,13 +45,7 @@
 
 <!--footer-->
 <div class="footer">
-    <div class="social">
-        <ul>
-           <!--   <li> <a class="so" href="#"><i class="fab fa-twitter"></i> </a></li>
-           <li>  <a  class="so"href="#"><i class="fab fa-instagram"></i> </a></li>-->
-          
-          
-        </ul>
+
         <p class="p-footer"> iwello &copy; 2020</p>
     </div>
 </div>
