--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 <!--timer starts here-->
-<div class="timer"></div>
+<!--<div class="timer"></div>-->
 
 
 <!--testimonials-->
@@ -32,7 +32,7 @@
 <div class="test">
     <p class="p-head">ABOUT US</p>
     <div class="content">
-        <p class="p-test"> iwello is a health solution that allows you to pay N100 (less than $1) for a consoltation, <br> N900 (less than $2) for a checkup and as low as N1600 per treatment. </p>
+        <p class="p-test"> iwello is a health solution that allows you to pay N100 (less than $1) for a consultation, <br> N900 (less than $2) for a checkup and as low as N1600 per treatment. </p>
         <p class="p-test"> you <b>NO LONGER</b> have to be afraid of hospitals and doctors becauuse of fees. <br> we got you covered all the way. no forceful subscription. you can <b>PAY AS YOU GO.</b> </p>
     </div>
 
